Fix teaser right align is not aligned to right side of page (#203)

--- a/src/theme/blocks/_teaser.scss
+++ b/src/theme/blocks/_teaser.scss
@@ -58,6 +58,7 @@
       flex-direction: row-reverse;
 
       .image-wrapper {
+        margin-right: 0px;
         margin-left: 20px;
 
         @media only screen and (max-width: $largest-mobile-screen) {
